tests/snapshots/formats__android-vendor-boot__vendor_boot-v3.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ vendor_boot-v3.img — Android vendor boot image v3, ramdisk 192 bytes, DTB 349 bytes  [0x0+0x2000]
  ▾ Header — version 3  [0x0+0x840]
      Magic: "VNDRBOOT"  [0x0+0x8]
      Header version: 3  [0x8+0x4]
      Page size: 2048  [0xc+0x4]
      Kernel load address: 0x40008000  [0x10+0x4]
      Ramdisk load address: 0x41000000  [0x14+0x4]
      Vendor ramdisk size: 192 — 192 bytes  [0x18+0x4]
      Command line: "androidboot.selinux=permissive"  [0x1c+0x800]
      Tags address: 0x40000100  [0x81c+0x4]
      Product name: "fillyfoal"  [0x820+0x10]
      Header size: 2112  [0x830+0x4]
      DTB size: 349 — 349 bytes  [0x834+0x4]
      DTB load address: 0x41f00000  [0x838+0x8]
    Header padding — 1.9 KiB  [0x840+0x7c0]
  ▾ Vendor ramdisk — LZ4 (legacy), 1 frame  [0x1000+0xc0]
    ▾ Decompressed — cpio archive (SVR4 newc), 4 entries, 48 bytes  [0x1000+0xc0]
      ▾ . — directory  [#1:0x0+0x70]
        ▾ Header  [#1:0x0+0x6e]
            Magic: "070701"  [#1:0x0+0x6]
            Inode: 0  [#1:0x6+0x8]
            Mode: 16877 — 0o40755 drwxr-xr-x  [#1:0xe+0x8]
            UID: 0  [#1:0x16+0x8]
            GID: 0  [#1:0x1e+0x8]
            Links: 2  [#1:0x26+0x8]
            Modification time: 1970-01-01 00:00:00 UTC  [#1:0x2e+0x8]
            File size: 0  [#1:0x36+0x8]
            Device major: 0  [#1:0x3e+0x8]
            Device minor: 0  [#1:0x46+0x8]
            Special device major: 0  [#1:0x4e+0x8]
            Special device minor: 0  [#1:0x56+0x8]
            Name size: 2  [#1:0x5e+0x8]
            Checksum: 0x0  [#1:0x66+0x8]
          Name: "."  [#1:0x6e+0x2]
      ▾ vendor — directory  [#1:0x70+0x78]
        ▾ Header  [#1:0x70+0x6e]
            Magic: "070701"  [#1:0x70+0x6]
            Inode: 1  [#1:0x76+0x8]
            Mode: 16877 — 0o40755 drwxr-xr-x  [#1:0x7e+0x8]
            UID: 0  [#1:0x86+0x8]
            GID: 0  [#1:0x8e+0x8]
            Links: 2  [#1:0x96+0x8]
            Modification time: 1970-01-01 00:00:00 UTC  [#1:0x9e+0x8]
            File size: 0  [#1:0xa6+0x8]
            Device major: 0  [#1:0xae+0x8]
            Device minor: 0  [#1:0xb6+0x8]
            Special device major: 0  [#1:0xbe+0x8]
            Special device minor: 0  [#1:0xc6+0x8]
            Name size: 7  [#1:0xce+0x8]
            Checksum: 0x0  [#1:0xd6+0x8]
          Name: "vendor"  [#1:0xde+0x7]
      ▾ vendor/etc — directory  [#1:0xe8+0x7c]
        ▾ Header  [#1:0xe8+0x6e]
            Magic: "070701"  [#1:0xe8+0x6]
            Inode: 2  [#1:0xee+0x8]
            Mode: 16877 — 0o40755 drwxr-xr-x  [#1:0xf6+0x8]
            UID: 0  [#1:0xfe+0x8]
            GID: 0  [#1:0x106+0x8]
            Links: 2  [#1:0x10e+0x8]
            Modification time: 1970-01-01 00:00:00 UTC  [#1:0x116+0x8]
            File size: 0  [#1:0x11e+0x8]
            Device major: 0  [#1:0x126+0x8]
            Device minor: 0  [#1:0x12e+0x8]
            Special device major: 0  [#1:0x136+0x8]
            Special device minor: 0  [#1:0x13e+0x8]
            Name size: 11  [#1:0x146+0x8]
            Checksum: 0x0  [#1:0x14e+0x8]
          Name: "vendor/etc"  [#1:0x156+0xb]
      ▾ vendor/etc/init.rc — 48 bytes  [#1:0x164+0xb4]
        ▾ Header  [#1:0x164+0x6e]
            Magic: "070701"  [#1:0x164+0x6]
            Inode: 3  [#1:0x16a+0x8]
            Mode: 33188 — 0o100644 -rw-r--r--  [#1:0x172+0x8]
            UID: 0  [#1:0x17a+0x8]
            GID: 0  [#1:0x182+0x8]
            Links: 1  [#1:0x18a+0x8]
            Modification time: 1970-01-01 00:00:00 UTC  [#1:0x192+0x8]
            File size: 48  [#1:0x19a+0x8]
            Device major: 0  [#1:0x1a2+0x8]
            Device minor: 0  [#1:0x1aa+0x8]
            Special device major: 0  [#1:0x1b2+0x8]
            Special device minor: 0  [#1:0x1ba+0x8]
            Name size: 19  [#1:0x1c2+0x8]
            Checksum: 0x0  [#1:0x1ca+0x8]
          Name: "vendor/etc/init.rc"  [#1:0x1d2+0x13]
        ▾ Content — UTF-8 text, LF line endings, 2 lines  [#1:0x1e8+0x30]
            Encoding: "UTF-8"
            Line endings: "LF" — 2 LF, 0 CRLF, 0 CR
          ▾ Lines — 2 lines  [#1:0x1e8+0x30]
              Line 1: "on early-init"  [#1:0x1e8+0xd]
              Line 2: "    setprop ro.fillyfoal.vendor 1"  [#1:0x1f6+0x21]
      ▾ TRAILER!!! — end of archive  [#1:0x218+0x7c]
        ▾ Header  [#1:0x218+0x6e]
            Magic: "070701"  [#1:0x218+0x6]
            Inode: 0  [#1:0x21e+0x8]
            Mode: 0 — 0o0 ?---------  [#1:0x226+0x8]
            UID: 0  [#1:0x22e+0x8]
            GID: 0  [#1:0x236+0x8]
            Links: 1  [#1:0x23e+0x8]
            Modification time: 1970-01-01 00:00:00 UTC  [#1:0x246+0x8]
            File size: 0  [#1:0x24e+0x8]
            Device major: 0  [#1:0x256+0x8]
            Device minor: 0  [#1:0x25e+0x8]
            Special device major: 0  [#1:0x266+0x8]
            Special device minor: 0  [#1:0x26e+0x8]
            Name size: 11  [#1:0x276+0x8]
            Checksum: 0x0  [#1:0x27e+0x8]
          Name: "TRAILER!!!"  [#1:0x286+0xb]
        Padding — 364 bytes  [#1:0x294+0x16c]
    ▾ Legacy frame  [0x1000+0xc0]
        Magic: 0x184c2102  [0x1000+0x4]
      ▾ Block 0 — 184 bytes  [0x1004+0xbc]
          Compressed size: 184  [0x1004+0x4]
          Compressed data  [0x1008+0xb8]
    Padding — 1.8 KiB  [0x10c0+0x740]
  ▾ DTB — "fillyfoal test board", DTB v17  [0x1800+0x15d]
    ▾ Header  [0x1800+0x28]
        Magic: 0xd00dfeed  [0x1800+0x4]
        Total size: 349  [0x1804+0x4]
        Structure block offset: 0x38  [0x1808+0x4]
        Strings block offset: 0x118  [0x180c+0x4]
        Memory reservation map offset: 0x28  [0x1810+0x4]
        Version: 17  [0x1814+0x4]
        Last compatible version: 16  [0x1818+0x4]
        Boot CPU ID: 0  [0x181c+0x4]
        Strings block size: 69  [0x1820+0x4]
        Structure block size: 224  [0x1824+0x4]
      Reserved memory map  [0x1828+0x10]
    ▾ /  [0x1838+0xe0]
        compatible: "example,fillyfoal"  [0x1840+0x20] → 0x184c+0x12
        model: "fillyfoal test board"  [0x1860+0x24] → 0x186c+0x15
        #address-cells: "<0x1>"  [0x1884+0x10] → 0x1890+0x4
        #size-cells: "<0x1>"  [0x1894+0x10] → 0x18a0+0x4
      ▾ memory@80000000  [0x18a4+0x0]
          device_type: "memory"  [0x18b8+0x14] → 0x18c4+0x7
          reg: "<0x80000000 0x10000000>"  [0x18cc+0x14] → 0x18d8+0x8
      ▾ chosen  [0x18e4+0x0]
          bootargs: "console=ttyS0"  [0x18f0+0x1c] → 0x18fc+0xe
      Strings  [0x1918+0x45]
    Padding — 1.7 KiB  [0x195d+0x6a3]
