tests/snapshots/formats__android-vendor-boot__vendor_boot.img.gz.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ vendor_boot.img — Android vendor boot image v4, ramdisk 94 bytes, DTB 98 bytes  [0x0+0x5000]
  ▾ Header — version 4  [0x0+0x850]
      Magic: "VNDRBOOT"  [0x0+0x8]
      Header version: 4  [0x8+0x4]
      Page size: 4096  [0xc+0x4]
      Kernel load address: 0x8000  [0x10+0x4]
      Ramdisk load address: 0x1000000  [0x14+0x4]
      Vendor ramdisk size: 94 — 94 bytes  [0x18+0x4]
      Command line: "console=ttyS0"  [0x1c+0x800]
      Tags address: 0x100  [0x81c+0x4]
      Product name: "tiny"  [0x820+0x10]
      Header size: 2128  [0x830+0x4]
      DTB size: 98 — 98 bytes  [0x834+0x4]
      DTB load address: 0x1f00000  [0x838+0x8]
      Ramdisk table size: 108  [0x840+0x4]
      Ramdisk table entries: 1  [0x844+0x4]
      Ramdisk table entry size: 108  [0x848+0x4]
      Bootconfig size: 26  [0x84c+0x4]
  ▾ Vendor ramdisks — 1 ramdisks, 94 bytes  [0x1000+0x5e]
    ▾ platform — gzip, 256 bytes uncompressed  [0x1000+0x5e] → 0x3000+0x6c
      ▾ Header  [0x1000+0xa]
          ID: 1f 8b  |..|  [0x1000+0x2]
          CM: deflate (0x8)  [0x1002+0x1]
          FLG: 0x0 []  [0x1003+0x1]
          MTIME: 1970-01-01 00:00:00 UTC  [0x1004+0x4]
          XFL: best compression (0x2)  [0x1008+0x1]
          OS: unknown (0xff)  [0x1009+0x1]
      ▾ Trailer  [0x1056+0x8]
          CRC32: 0x95967339  [0x1056+0x4]
          ISIZE: 256  [0x105a+0x4]
      ▾ Content — cpio archive (SVR4 newc), 1 entry, 8 bytes  [0x100a+0x4c]
        ▾ init.tiny.rc — 8 bytes  [#1:0x0+0x84]
          ▾ Header  [#1:0x0+0x6e]
              Magic: "070701"  [#1:0x0+0x6]
              Inode: 1  [#1:0x6+0x8]
              Mode: 33188 — 0o100644 -rw-r--r--  [#1:0xe+0x8]
              UID: 0  [#1:0x16+0x8]
              GID: 0  [#1:0x1e+0x8]
              Links: 1  [#1:0x26+0x8]
              Modification time: 1970-01-01 00:00:00 UTC  [#1:0x2e+0x8]
              File size: 8  [#1:0x36+0x8]
              Device major: 0  [#1:0x3e+0x8]
              Device minor: 0  [#1:0x46+0x8]
              Special device major: 0  [#1:0x4e+0x8]
              Special device minor: 0  [#1:0x56+0x8]
              Name size: 13  [#1:0x5e+0x8]
              Checksum: 0x0  [#1:0x66+0x8]
            Name: "init.tiny.rc"  [#1:0x6e+0xd]
          ▾ Content — UTF-8 text, LF line endings, 1 line  [#1:0x7c+0x8]
              Encoding: "UTF-8"
              Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
            ▾ Lines — 1 line  [#1:0x7c+0x8]
                Line 1: "on boot"  [#1:0x7c+0x7]
        ▾ TRAILER!!! — end of archive  [#1:0x84+0x7c]
          ▾ Header  [#1:0x84+0x6e]
              Magic: "070701"  [#1:0x84+0x6]
              Inode: 2  [#1:0x8a+0x8]
              Mode: 0 — 0o0 ----------  [#1:0x92+0x8]
              UID: 0  [#1:0x9a+0x8]
              GID: 0  [#1:0xa2+0x8]
              Links: 1  [#1:0xaa+0x8]
              Modification time: 1970-01-01 00:00:00 UTC  [#1:0xb2+0x8]
              File size: 0  [#1:0xba+0x8]
              Device major: 0  [#1:0xc2+0x8]
              Device minor: 0  [#1:0xca+0x8]
              Special device major: 0  [#1:0xd2+0x8]
              Special device minor: 0  [#1:0xda+0x8]
              Name size: 11  [#1:0xe2+0x8]
              Checksum: 0x0  [#1:0xea+0x8]
            Name: "TRAILER!!!"  [#1:0xf2+0xb]
  ▾ DTB — "tiny", DTB v17  [0x2000+0x62]
    ▾ Header  [0x2000+0x28]
        Magic: 0xd00dfeed  [0x2000+0x4]
        Total size: 98  [0x2004+0x4]
        Structure block offset: 0x38  [0x2008+0x4]
        Strings block offset: 0x5c  [0x200c+0x4]
        Memory reservation map offset: 0x28  [0x2010+0x4]
        Version: 17  [0x2014+0x4]
        Last compatible version: 16  [0x2018+0x4]
        Boot CPU ID: 0  [0x201c+0x4]
        Strings block size: 6  [0x2020+0x4]
        Structure block size: 36  [0x2024+0x4]
      Reserved memory map  [0x2028+0x10]
    ▾ /  [0x2038+0x24]
        model: "tiny"  [0x2040+0x14] → 0x204c+0x5
      Strings  [0x205c+0x6]
    Ramdisk table — 1 entries  [0x3000+0x6c]
  ▾ Bootconfig — UTF-8 text, LF line endings, 1 line  [0x4000+0x1a]
      Encoding: "UTF-8"
      Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
    ▾ Lines — 1 line  [0x4000+0x1a]
        Line 1: "androidboot.hardware=tiny"  [0x4000+0x19]
